Source/ISS/Development/NAMS/M9Concur/Vendor/Include/terM9.h

ViStatus _VI_FUNC terM9_fetchChannelSignature (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 signature);
ViStatus _VI_FUNC terM9_fetchChannelState (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 detectorState, ViPInt32 deskewRelay,
                              ViPBoolean overTemperature, ViPBoolean
                              referenceOverload);
ViStatus _VI_FUNC terM9_fetchDynamicFailures (ViSession vi, ViInt32 resultIndex,
                              ViInt32 pinListMaxCount, ViPInt32 pinListCount,
                              ViInt32 _VI_FAR pinList[], ViInt32 _VI_FAR
                              pinOpcodeList[]);
ViStatus _VI_FUNC terM9_fetchDynamicPatternResults (ViSession vi, ViInt32
                              initialResultIndex, ViInt32 resultCount, ViPInt32
                              resultsCount, ViInt32 _VI_FAR results[], ViInt32
                              _VI_FAR patternIndexes[]);
ViStatus _VI_FUNC terM9_fetchDynamicPatternSetResult (ViSession vi, ViPInt32
                              patternSetResult, ViPInt32 resultCount, ViPInt32
                              lastResultIndex);
ViStatus _VI_FUNC terM9_fetchDynamicPatternSetState (ViSession vi, ViPInt32
                              loopState, ViPInt32 runState, ViPBoolean
                              learnedPastLimit, ViPBoolean lastPatternValid,
                              ViPBoolean stoppedOnFail, ViPBoolean
                              stoppedOnEvent, ViPBoolean stoppedOnProbe,
                              ViPBoolean stoppedOnLSEQHalt, ViPBoolean
                              stoppedOnPattern, ViPInt32 stoppedOnPatternIndex);
ViStatus _VI_FUNC terM9_fetchDynamicPinResults (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialResultIndex, ViInt32 resultCount, ViPInt32
                              resultListCount, ViInt32 _VI_FAR resultList[]);
ViStatus _VI_FUNC terM9_fetchDynamicProbeFailingDatatype (ViSession vi, ViPInt32
                              failingDataType);
ViStatus _VI_FUNC terM9_fetchDynamicProbeFailingStep (ViSession vi, ViPInt32
                              failingStep);
ViStatus _VI_FUNC terM9_fetchDynamicProbePatternCount (ViSession vi, ViPInt32
                              patternCount);
ViStatus _VI_FUNC terM9_fetchDynamicProbeResult (ViSession vi, ViPInt32 result);
ViStatus _VI_FUNC terM9_fetchDynamicProbeStepCount (ViSession vi, ViPInt32
                              stepCount);
ViStatus _VI_FUNC terM9_fetchFailingDynamicPatternResults (ViSession vi, ViInt32
                              initialResultIndex, ViInt32 resultCount, ViPInt32
                              resultIndexesCount, ViInt32 _VI_FAR
                              resultIndexes[], ViInt32 _VI_FAR
                              patternIndexes[]);
ViStatus _VI_FUNC terM9_fetchFailingDynamicPinResults (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialResultIndex, ViInt32 resultCount, ViPInt32
                              failingPinListCount, ViInt32 _VI_FAR
                              failingPinList[]);
ViStatus _VI_FUNC terM9_fetchFailingStaticPinResults (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViPInt32
                              failingPinListCount, ViInt32 _VI_FAR
                              failingPinList[]);
ViStatus _VI_FUNC terM9_fetchHighVoltagePinGroupState (ViSession vi, ViInt32
                              stateMaxCount, ViPInt32 stateCount, ViUInt32
                              _VI_FAR state[]);
ViStatus _VI_FUNC terM9_fetchHighVoltagePinState (ViSession vi, ViInt32
                              HVPinIndex, ViPInt32 state);
ViStatus _VI_FUNC terM9_fetchPassingDynamicPatternResults (ViSession vi, ViInt32
                              initialResultIndex, ViInt32 resultCount, ViPInt32
                              resultIndexesCount, ViInt32 _VI_FAR
                              resultIndexes[], ViInt32 _VI_FAR
                              patternIndexes[]);
ViStatus _VI_FUNC terM9_fetchPassingDynamicPinResults (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViInt32
                              initialResultIndex, ViInt32 resultCount, ViPInt32
                              passingPinListCount, ViInt32 _VI_FAR
                              passingPinList[]);
ViStatus _VI_FUNC terM9_fetchPassingStaticPinResults (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViPInt32
                              passingPinListCount, ViInt32 _VI_FAR
                              passingPinList[]);
ViStatus _VI_FUNC terM9_fetchPatternClutchState (ViSession vi, ViPInt32 state);
ViStatus _VI_FUNC terM9_fetchProbeDetectData (ViSession vi, ViInt32
                              initialStepIndex, ViInt32 stepCount, ViInt32
                              _VI_FAR detectData[]);
ViStatus _VI_FUNC terM9_fetchProbeMapData (ViSession vi, ViInt32
                              mapDataMaxCount, ViPInt32 mapDataCount, ViInt32
                              _VI_FAR mapData[]);
ViStatus _VI_FUNC terM9_fetchProbeSettings (ViSession vi, ViPInt32 probeMode,
                              ViPInt32 probeConfig, ViPInt32 staticCapture,
                              ViPInt32 executeMode);
ViStatus _VI_FUNC terM9_fetchStaticFailures (ViSession vi, ViInt32
                              pinListMaxCount, ViPInt32 pinListCount, ViInt32
                              _VI_FAR pinList[], ViInt32 _VI_FAR
                              pinStateList[]);
ViStatus _VI_FUNC terM9_fetchStaticPatternResult (ViSession vi, ViPInt32
                              result);
ViStatus _VI_FUNC terM9_fetchStaticPinResults (ViSession vi, ViInt32
                              pinListCount, ViInt32 _VI_FAR pinList[], ViPInt32
                              resultListCount, ViInt32 _VI_FAR resultList[]);
ViStatus _VI_FUNC terM9_fetchStaticProbeFailingDatatype (ViSession vi, ViPInt32
                              failingDataType);
ViStatus _VI_FUNC terM9_fetchStaticProbeFailingStep (ViSession vi, ViPInt32
                              failingStep);
ViStatus _VI_FUNC terM9_fetchStaticProbePatternCount (ViSession vi, ViPInt32
                              patternCount);
ViStatus _VI_FUNC terM9_fetchStaticProbeResult (ViSession vi, ViPInt32 result);
ViStatus _VI_FUNC terM9_fetchStaticProbeStepCount (ViSession vi, ViPInt32
                              stepCount);
ViStatus _VI_FUNC terM9_fetchSystemClutchState (ViSession vi, ViPInt32 state);
ViStatus _VI_FUNC terM9_getDMTXToPinConnect (ViSession vi, ViPInt32 scopeIndex);
ViStatus _VI_FUNC terM9_getDynamicPatternSetTimeout (ViSession vi, ViPReal64
                              timeout);
ViStatus _VI_FUNC terM9_getGroundReference (ViSession vi, ViInt32 scopeIndex,
                              ViPInt32 groundReference);
ViStatus _VI_FUNC terM9_getLowPower (ViSession vi, ViInt32 scopeIndex,
                              ViPBoolean state);
ViStatus _VI_FUNC terM9_getStaticPatternDelay (ViSession vi, ViPReal64 delay);
ViStatus _VI_FUNC terM9_getSystemEnable (ViSession vi, ViPBoolean enable);
ViStatus _VI_FUNC terM9_getSystemTimingMode (ViSession vi, ViPInt32 timingMode);
ViStatus _VI_FUNC terM9_initiateDynamicPatternSetExecution (ViSession vi);
ViStatus _VI_FUNC terM9_prepareDynamicPatternSetExecution (ViSession vi,
                              ViBoolean expandLoops, ViBoolean stopOnFail,
                              ViBoolean stopOnEvent, ViBoolean stopOnProbe,
                              ViBoolean stopOnLSEQ, ViBoolean stopOnPattern,
                              ViInt32 stopOnPatternIndex, ViInt32 learnFlag,
                              ViInt32 preCountFlag, ViInt32 preCount, ViInt32
                              postCount);
ViStatus _VI_FUNC terM9_prepareDynamicProbeExecution (ViSession vi, ViInt32
                              executeMode);
ViStatus _VI_FUNC terM9_prepareStaticProbeExecution (ViSession vi, ViInt32
                              executeMode, ViInt32 staticCapture);
ViStatus _VI_FUNC terM9_runDynamicPatternSet (ViSession vi, ViBoolean
                              expandLoops, ViPInt32 patternSetResult);
ViStatus _VI_FUNC terM9_runStaticPattern (ViSession vi, ViBoolean step,
                              ViBoolean test);
ViStatus _VI_FUNC terM9_setDMTXToPinConnect (ViSession vi, ViInt32 scopeIndex);
ViStatus _VI_FUNC terM9_setDynamicPatternSetTimeout (ViSession vi, ViReal64
                              timeout);
ViStatus _VI_FUNC terM9_setGroundReference (ViSession vi, ViInt32 scopeIndex,
                              ViInt32 groundReference);
ViStatus _VI_FUNC terM9_setLowPower (ViSession vi, ViInt32 scopeIndex, ViBoolean
                              state);
ViStatus _VI_FUNC terM9_setStaticPatternDelay (ViSession vi, ViReal64 delay);
ViStatus _VI_FUNC terM9_setSystemEnable (ViSession vi, ViBoolean enable);
ViStatus _VI_FUNC terM9_setSystemTimingMode (ViSession vi, ViInt32 timingMode);
ViStatus _VI_FUNC terM9_setUserClock (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 connect, ViReal64 highVoltageLevel,
                              ViReal64 lowVoltageLevel, ViInt32 mode, ViInt32
                              phaseEntryCount, ViReal64 _VI_FAR phaseEntry[],
                              ViInt32 trigger);
ViStatus _VI_FUNC terM9_setUserClockConnect (ViSession vi, ViInt32
                              userClockIndex, ViInt32 connect);
ViStatus _VI_FUNC terM9_setUserClockHighVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViReal64 highVoltageLevel);
ViStatus _VI_FUNC terM9_setUserClockLowVoltageLevel (ViSession vi, ViInt32
                              userClockIndex, ViReal64 lowVoltageLevel);
ViStatus _VI_FUNC terM9_setUserClockMode (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 mode);
ViStatus _VI_FUNC terM9_setUserClockPhase (ViSession vi, ViInt32 userClockIndex,
                              ViInt32 phaseEntryCount, ViReal64 _VI_FAR
                              phaseEntry[]);
ViStatus _VI_FUNC terM9_setUserClockPhaseAssert (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViReal64
                              assertTime);
ViStatus _VI_FUNC terM9_setUserClockPhaseReturn (ViSession vi, ViInt32
                              userClockIndex, ViInt32 phaseIndex, ViReal64
                              returnTime);
ViStatus _VI_FUNC terM9_setUserClockTrigger (ViSession vi, ViInt32
                              userClockIndex, ViInt32 trigger);
ViStatus _VI_FUNC terM9_stopAtPattern (ViSession vi, ViInt32 patternIndex,
                              ViBoolean stopAtPattern);
ViStatus _VI_FUNC terM9_stopDynamicPatternSetExecution (ViSession vi);
ViStatus _VI_FUNC terM9_stopForFailure (ViSession vi, ViBoolean stopForFailure);
ViStatus _VI_FUNC terM9_waitForDynamicPatternSetExecution (ViSession vi);