Source/Core/Source/System/TPExec_TETS/Source/TERM9.vb


    Declare Function terM9_setUserClock Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal connect As Integer, ByVal highVoltageLevel As Double, ByVal lowVoltageLevel As Double, ByVal mode As Integer, ByVal phaseEntryCount As Integer, ByRef phaseEntry As Double, ByVal trigger As Integer) As Integer

    Declare Function terM9_setUserClockConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal connect As Integer) As Integer

    Declare Function terM9_setUserClockMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal mode As Integer) As Integer

    Declare Function terM9_setUserClockPhase Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal phaseEntryCount As Integer, ByRef phaseEntry As Double) As Integer

    Declare Function terM9_setUserClockPhaseAssert Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal PhaseIdx As Integer, ByVal assertTime As Double) As Integer

    Declare Function terM9_setUserClockPhaseReturn Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal PhaseIdx As Integer, ByVal returnTime As Double) As Integer

    Declare Function terM9_setUserClockTrigger Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal trigger As Integer) As Integer

    Declare Function terM9_setUserClockHighVoltageLevel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal highVoltageLevel As Double) As Integer

    Declare Function terM9_setUserClockLowVoltageLevel Lib "terM9_32.dll" (ByVal vi As Integer, ByVal userClockIdx As Integer, ByVal lowVoltageLevel As Double) As Integer

    Declare Function terM9_getSystemEnable Lib "terM9_32.dll" (ByVal vi As Integer, ByRef enable As Short) As Integer

    Declare Function terM9_setSystemEnable Lib "terM9_32.dll" (ByVal vi As Integer, ByVal enable As Short) As Integer

    Declare Function terM9_getDynamicPatternSetTimeout Lib "terM9_32.dll" (ByVal vi As Integer, ByRef timeout As Double) As Integer

    Declare Function terM9_setDynamicPatternSetTimeout Lib "terM9_32.dll" (ByVal vi As Integer, ByVal timeout As Double) As Integer

    Declare Function terM9_getStaticPatternDelay Lib "terM9_32.dll" (ByVal vi As Integer, ByRef Delay As Double) As Integer

    Declare Function terM9_setStaticPatternDelay Lib "terM9_32.dll" (ByVal vi As Integer, ByVal Delay As Double) As Integer

    Declare Function terM9_getGroundReference Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef groundReference As Integer) As Integer

    Declare Function terM9_setGroundReference Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal groundReference As Integer) As Integer

    Declare Function terM9_getSystemTimingMode Lib "terM9_32.dll" (ByVal vi As Integer, ByRef timingMode As Integer) As Integer

    Declare Function terM9_setSystemTimingMode Lib "terM9_32.dll" (ByVal vi As Integer, ByVal timingMode As Integer) As Integer

    Declare Function terM9_getLowPower Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef state As Short) As Integer

    Declare Function terM9_setLowPower Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByVal state As Short) As Integer

    Declare Function terM9_getDMTXToPinConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByRef scopeIdx As Integer) As Integer

    Declare Function terM9_setDMTXToPinConnect Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer) As Integer

    Declare Function terM9_runDynamicPatternSet Lib "terM9_32.dll" (ByVal vi As Integer, ByVal expandLoops As Short, ByRef patternSetResult As Integer) As Integer

    Declare Function terM9_prepareDynamicPatternSet Lib "terM9_32.dll" (ByVal vi As Integer) As Short

    Declare Function terM9_prepareDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Integer, ByVal expandLoops As Short, ByVal stopOnFail As Short, ByVal stopOnEvent As Short, ByVal stopOnProbe As Short, ByVal stopOnLSEQ As Short, ByVal stopOnPattern As Short, ByVal stopOnPatternIdx As Integer, ByVal learnFlag As Integer, ByVal preCountFlag As Integer, ByVal preCount As Integer, ByVal postCount As Integer) As Integer

    Declare Function terM9_initiateDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_waitForDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_stopDynamicPatternSetExecution Lib "terM9_32.dll" (ByVal vi As Integer) As Integer

    Declare Function terM9_runStaticPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByVal patternStep As Short, ByVal test As Short) As Integer

    Declare Function terM9_fetchChannelSignature Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef SIG As Integer) As Integer

    Declare Function terM9_fetchChannelState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal scopeIdx As Integer, ByRef detectorState As Integer, ByRef deskewRelay As Integer, ByRef overTemperature As Short, ByRef referenceOverload As Short) As Integer

    Declare Function terM9_fetchPatternClutchState Lib "terM9_32.dll" (ByVal vi As Integer, ByRef state As Integer) As Integer

    Declare Function terM9_fetchSystemClutchState Lib "terM9_32.dll" (ByVal vi As Integer, ByRef state As Integer) As Integer

    Declare Function terM9_fetchHighVoltagePinGroupState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal stateMaxCount As Integer, ByRef stateCount As Integer, ByRef state As Integer) As Integer

    Declare Function terM9_fetchHighVoltagePinState Lib "terM9_32.dll" (ByVal vi As Integer, ByVal HVPinIdx As Integer, ByRef state As Integer) As Integer

    Declare Function terM9_fetchDynamicPatternSetResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef patternSetResult As Integer, ByRef resultCount As Integer, ByRef lastResultIdx As Integer) As Integer

    Declare Function terM9_fetchDynamicPatternSetState Lib "terM9_32.dll" (ByVal vi As Integer, ByRef loopState As Integer, ByRef runState As Integer, ByRef learnedPastLimit As Short, ByRef lastPatternValid As Short, ByRef stoppedOnFail As Short, ByRef stoppedOnEvent As Short, ByRef stoppedOnProbe As Short, ByRef stoppedOnLSEQHalt As Short, ByRef stoppedOnPattern As Short, ByRef stoppedOnPatternIdx As Integer) As Integer

    Declare Function terM9_fetchDynamicFailures Lib "terM9_32.dll" (ByVal vi As Integer, ByVal resultIdx As Integer, ByVal pinListMaxCount As Integer, ByRef pinListCount As Integer, ByRef pinList As Integer, ByRef pinOpcodeList As Integer) As Integer

    Declare Function terM9_fetchDynamicPatternResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal initResultIdx As Integer, ByVal resultCount As Integer, ByRef resultsCount As Integer, ByRef results As Integer, ByRef patternIndexes As Integer) As Integer

    Declare Function terM9_fetchPassingDynamicPatternResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal initResultIdx As Integer, ByVal resultCount As Integer, ByRef resultIndexesCount As Integer, ByRef resultIndexes As Integer, ByRef patternIndexes As Integer) As Integer

    Declare Function terM9_fetchFailingDynamicPatternResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal initResultIdx As Integer, ByVal resultCount As Integer, ByRef resultIndexesCount As Integer, ByRef resultIndexes As Integer, ByRef patternIndexes As Integer) As Integer

    Declare Function terM9_fetchDynamicPinResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal initResultIdx As Integer, ByVal resultCount As Integer, ByRef resultListCount As Integer, ByRef resultList As Integer) As Integer

    Declare Function terM9_fetchPassingDynamicPinResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal initResultIdx As Integer, ByVal resultCount As Integer, ByRef passingPinListCount As Integer, ByRef passingPinList As Integer) As Integer

    Declare Function terM9_fetchFailingDynamicPinResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByVal initResultIdx As Integer, ByVal resultCount As Integer, ByRef failingPinListCount As Integer, ByRef failingPinList As Integer) As Integer

    Declare Function terM9_fetchStaticPatternResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef result As Integer) As Integer

    Declare Function terM9_fetchStaticFailures Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListMaxCount As Integer, ByRef pinListCount As Integer, ByRef pinList As Integer, ByRef pinStateList As Integer) As Integer

    Declare Function terM9_fetchStaticPinResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByRef resultListCount As Integer, ByRef resultList As Integer) As Integer

    Declare Function terM9_fetchPassingStaticPinResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByRef passingPinListCount As Integer, ByRef passingPinList As Integer) As Integer

    Declare Function terM9_fetchFailingStaticPinResults Lib "terM9_32.dll" (ByVal vi As Integer, ByVal pinListCount As Integer, ByRef pinList As Integer, ByRef failingPinListCount As Integer, ByRef failingPinList As Integer) As Integer

    Declare Function terM9_fetchProbeDetectData Lib "terM9_32.dll" (ByVal vi As Integer, ByVal initStepIdx As Integer, ByVal stepCount As Integer, ByRef detectData As Integer) As Integer

    Declare Function terM9_fetchProbeMapData Lib "terM9_32.dll" (ByVal vi As Integer, ByVal mapDataMaxCount As Integer, ByRef mapDataCount As Integer, ByRef mapData As Integer) As Integer

    Declare Function terM9_fetchProbeSettings Lib "terM9_32.dll" (ByVal vi As Integer, ByRef probeMode As Integer, ByRef probeConfig As Integer, ByRef staticCapture As Integer, ByRef executeMode As Integer) As Integer

    Declare Function terM9_prepareDynamicProbeExecution Lib "terM9_32.dll" (ByVal vi As Integer, ByVal executeMode As Integer) As Integer

    Declare Function terM9_fetchDynamicProbeResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef result As Integer) As Integer

    Declare Function terM9_fetchDynamicProbeFailingDatatype Lib "terM9_32.dll" (ByVal vi As Integer, ByRef failingDataType As Integer) As Integer

    Declare Function terM9_fetchDynamicProbeFailingStep Lib "terM9_32.dll" (ByVal vi As Integer, ByRef failingStep As Integer) As Integer

    Declare Function terM9_fetchDynamicProbePatternCount Lib "terM9_32.dll" (ByVal vi As Integer, ByRef patternCount As Integer) As Integer

    Declare Function terM9_fetchDynamicProbeStepCount Lib "terM9_32.dll" (ByVal vi As Integer, ByRef stepCount As Integer) As Integer

    Declare Function terM9_prepareStaticProbeExecution Lib "terM9_32.dll" (ByVal vi As Integer, ByVal executeMode As Integer, ByVal staticCapture As Integer) As Integer

    Declare Function terM9_fetchStaticProbeResult Lib "terM9_32.dll" (ByVal vi As Integer, ByRef result As Integer) As Integer

    Declare Function terM9_fetchStaticProbeFailingDatatype Lib "terM9_32.dll" (ByVal vi As Integer, ByRef failingDataType As Integer) As Integer

    Declare Function terM9_fetchStaticProbeFailingStep Lib "terM9_32.dll" (ByVal vi As Integer, ByRef failingStep As Integer) As Integer

    Declare Function terM9_fetchStaticProbePatternCount Lib "terM9_32.dll" (ByVal vi As Integer, ByRef patternCount As Integer) As Integer

    Declare Function terM9_fetchStaticProbeStepCount Lib "terM9_32.dll" (ByVal vi As Integer, ByRef stepCount As Integer) As Integer

    Declare Function terM9_stopForFailure Lib "terM9_32.dll" (ByVal vi As Integer, ByVal stopForFailure As Short) As Integer

    Declare Function terM9_stopAtPattern Lib "terM9_32.dll" (ByVal vi As Integer, ByVal patternIdx As Integer, ByVal stopAtPattern As Short) As Integer
